fixed posts cover images on list covering when not fitting, now they adapt to a max height instead

--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -88,7 +88,7 @@ main.main {
 .main-container {
     min-height: 100vh;
     align-items: flex-start;
-    padding: 0 15px;
+    padding: 0 10px;
     gap: var(--section-separation);
     padding-top: var(--main-top-padding);
     
